Revision history for Bible::OBML

{{$NEXT}}

2.05      2022-12-05 10:30:43-08:00 America/Los_Angeles
        - Remove extra spacing if it exists in OBML output

2.04      2022-03-30 09:01:16-07:00 America/Los_Angeles
        - Avoid wrapping and dewrapping any indented content

2.03      2022-03-17 10:35:37-07:00 America/Los_Angeles
        - Fix to support Perl down to version 20

2.02      2022-03-16 20:36:24-07:00 America/Los_Angeles
        - Minor documentation fixes

2.01      2022-03-16 20:19:47-07:00 America/Los_Angeles
        - Overhaul the entire module to be a bit smarter and more robust

1.18      2022-02-11 14:36:38-08:00 America/Los_Angeles
        - Remove superfluous spaces around CRs and FNs

1.17      2021-11-18 08:47:56-08:00 America/Los_Angeles
        - Switch from use to require to resolve -c check
        - Require Template with warnings dumped instead of use

1.16      2021-01-13 11:01:18-08:00 America/Los_Angeles
        - Override some minimum version reqs in dist.ini

1.15      2021-01-12 09:00:29-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year
        - Update to require Bible::Reference 1.05

1.14      2020-07-17 15:21:06-07:00 America/Los_Angeles
        - Improved rendering of OBML from parsed data

1.13      2020-07-16 13:04:16-07:00 America/Los_Angeles
        - Replace deprecated throw() calls with croak()
        - Remove redundant utf8 file encoding setting

1.12      2020-07-09 08:25:15-07:00 America/Los_Angeles
        - Remove subroutine signatures to allow operation back to Perl 5.14

1.11      2020-07-08 18:41:16-07:00 America/Los_Angeles
        - Remove Moose dependency; replace with exact and exact::class
        - Update Travis YAML

1.10      2018-01-04 18:33:33-08:00 America/Los_Angeles