@@ -52,4 +52,4 @@ untracked_files = ignore
 [Prereqs]
 exact            = 1.14
 exact::class     = 1.10
-Bible::Reference = 1.08
+Bible::Reference = 1.15
