@@ -1,6 +1,7 @@
 Revision history for Bible::OBML
 
 {{$NEXT}}
+        - Deploy use of Bible::Reference's new chapter match flag
 
 2.05      2022-12-05 10:30:43-08:00 America/Los_Angeles
         - Remove extra spacing if it exists in OBML output
